; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/zram/extr_zram_sysfs.c_zram_stat64_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/zram/extr_zram_sysfs.c_zram_stat64_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zram = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zram*, i32*)* @zram_stat64_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zram_stat64_read(%struct.zram* %0, i32* %1) #0 {
  %3 = alloca %struct.zram*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.zram* %0, %struct.zram** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.zram*, %struct.zram** %3, align 8
  %7 = getelementptr inbounds %struct.zram, %struct.zram* %6, i32 0, i32 0
  %8 = call i32 @spin_lock(i32* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  %11 = load %struct.zram*, %struct.zram** %3, align 8
  %12 = getelementptr inbounds %struct.zram, %struct.zram* %11, i32 0, i32 0
  %13 = call i32 @spin_unlock(i32* %12)
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
